Fix home background height on iOS
Fixes #15

--- a/_sass/home.sass
+++ b/_sass/home.sass
@@ -1,7 +1,16 @@
+.home__window-height-indicator
+    position: fixed
+    top: 0
+    left: 0
+    width: 0
+    height: 100%
+    z-index: 0
+
 .home__top
     height: 100vh
     min-height: 30rem
     position: relative
+    z-index: 1
 
 .home__background
     position: absolute
